dev/test_programs/INVALID/group5/scanner_literal_interpreted_multiline.go
package scanner_literal_interpreted_multiline

// Multiline interpreted string literals not allowed

var r string = "This is on one line
and this on another";
